--- a/corvo/index.html
+++ b/corvo/index.html
@@ -15,14 +15,14 @@
       <nav>
         <ul>
           <li><a href="#winery-section">Главная</a></li>
-          <li><a href="#">Продукты</a></li>
-          <li><a href="#">О нас</a></li>
+          <li><a href="#products-section">Продукты</a></li>
+          <li><a href="#contacts-section">О нас</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <div class="container-fluid">
+      <div class="container">
         <div class="winery" id="winery-section">
           <div class="info">
             <h1>О винодельне Корво Бьянко</h1>
@@ -31,6 +31,10 @@
               княжестве, называвшаяся в Старшей Речи «Гвин Кербин». Именно здесь
               рождается чрезвычайно оригинальное вино Сепременто.
             </p>
+            <a
+              href="https://vedmak.fandom.com/wiki/%D0%9A%D0%BE%D1%80%D0%B2%D0%BE_%D0%91%D1%8C%D1%8F%D0%BD%D0%BA%D0%BE"
+              >Больше о нашей винодельне</a
+            >
           </div>
           <div
             class="carousel slide"
@@ -75,6 +79,130 @@
           <button class="carousel-control-next" type="button" data-bs-target="#winery-carousel" data-bs-slide="next">
             <span class="carousel-control-next-icon"></span>
           </button> -->
+        </div>
+        <div class="container-products">
+          <h1>Коллекция вина</h1>
+          <div class="products" id="products-section">
+            <div class="card">
+              <img
+                src="assest/images/wine/white-wine-from-Beauclair.png"
+                class="img-fluid"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Белое вино из Боклера</h4>
+                <a href="#" class="btn btn-danger">Подробнее</a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assest/images/wine/butcher-from-blaviken.png"
+                class="img-fluid"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Мясник из Блавикена</h4>
+                <a href="#" class="btn btn-danger">Подробнее</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="assest/images/wine/pino-blan.png" class="img-fluid" />
+              <div class="card-body">
+                <h4 class="card-title">Пино Блан Резерв Кавлер Д'Адам</h4>
+                <a href="#" class="btn btn-danger">Подробнее</a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assest/images/wine/caberne-shato.png"
+                class="img-fluid"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Каберне Шато Де Конрад</h4>
+                <a href="#" class="btn btn-danger">Подробнее</a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assest/images/wine/shato-mon-valgane.png"
+                class="img-fluid"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Шато Мон-Вальжан</h4>
+                <a href="#" class="btn btn-danger">Подробнее</a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assest/images/wine/graf-var-ohmann.png"
+                class="img-fluid"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Граф Вар Охманн Шираз</h4>
+                <a href="#" class="btn btn-danger">Подробнее</a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assest/images/wine/gercog-nikolya.png"
+                class="img-fluid"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Герцог Николя Шардоне</h4>
+                <a href="#" class="btn btn-danger">Подробнее</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="assest/images/wine/ervelyus.png" class="img-fluid" />
+              <div class="card-body">
+                <h4 class="card-title">Эрвелюс</h4>
+                <a
+                  href="https://vedmak.fandom.com/wiki/%D0%AD%D1%80%D0%B2%D0%B5%D0%BB%D1%8E%D1%81"
+                  class="btn btn-danger"
+                  >Подробнее</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <img src="assest/images/wine/est-est.png" class="img-fluid" />
+              <div class="card-body">
+                <h4 class="card-title">Эст-Эст</h4>
+                <a
+                  href="https://vedmak.fandom.com/wiki/%D0%AD%D1%81%D1%82-%D0%AD%D1%81%D1%82"
+                  class="btn btn-danger"
+                  >Подробнее</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assest/images/wine/geralt-from-rivia.png"
+                class="img-fluid"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Геральт из Ривии</h4>
+                <a href="#" class="btn btn-danger">Подробнее</a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assest/images/wine/wonderful-wine-gilyom.png"
+                class="img-fluid"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Восхитительное вино Гильома Де Буа</h4>
+                <a href="#" class="btn btn-danger">Подробнее</a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assest/images/wine/white-wolf.png"
+                class="img-fluid"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Белый Волк</h4>
+                <a href="#" class="btn btn-danger">Подробнее</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
