--- a/corvo/index.html
+++ b/corvo/index.html
@@ -33,7 +33,7 @@
             </p>
             <a
               href="https://vedmak.fandom.com/wiki/%D0%9A%D0%BE%D1%80%D0%B2%D0%BE_%D0%91%D1%8C%D1%8F%D0%BD%D0%BA%D0%BE"
-              >Больше о нашей винодельне</a
+              >Больше о винодельне</a
             >
           </div>
           <div
@@ -90,10 +90,10 @@
               />
               <div class="card-body">
                 <h4 class="card-title">Белое вино из Боклера</h4>
-                <a href="#" class="btn btn-danger">Подробнее</a>
+                <a href="#" class="btn btn-danger ">Подробнее</a>
               </div>
             </div>
-            <div class="card">
+            <div class="card ">
               <img
                 src="assest/images/wine/butcher-from-blaviken.png"
                 class="img-fluid"
@@ -103,14 +103,14 @@
                 <a href="#" class="btn btn-danger">Подробнее</a>
               </div>
             </div>
-            <div class="card">
+            <div class="card ">
               <img src="assest/images/wine/pino-blan.png" class="img-fluid" />
               <div class="card-body">
                 <h4 class="card-title">Пино Блан Резерв Кавлер Д'Адам</h4>
                 <a href="#" class="btn btn-danger">Подробнее</a>
               </div>
             </div>
-            <div class="card">
+            <div class="card ">
               <img
                 src="assest/images/wine/caberne-shato.png"
                 class="img-fluid"
@@ -120,7 +120,7 @@
                 <a href="#" class="btn btn-danger">Подробнее</a>
               </div>
             </div>
-            <div class="card">
+            <div class="card ">
               <img
                 src="assest/images/wine/shato-mon-valgane.png"
                 class="img-fluid"
@@ -204,6 +204,9 @@
             </div>
           </div>
         </div>
+
+
+
       </div>
     </main>
 
