--- a/corvo/index.html
+++ b/corvo/index.html
@@ -36,6 +36,41 @@
               >Больше о винодельне</a
             >
           </div>
+          <div
+            class="carousel slide"
+            data-bs-ride="carousel"
+            id="winery-carousel"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#winery-carousel"
+                data-bs-slide-to="0"
+                class="active"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#winery-carousel"
+                data-bs-slide-to="1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#winery-carousel"
+                data-bs-slide-to="2"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assest/images/corvo-bianco.jpg" class="img-fluid" />
+              </div>
+              <div class="carousel-item">
+                <img src="assest/images/corvo-bianco-1.jpg" class="img-fluid" />
+              </div>
+              <div class="carousel-item">
+                <img src="assest/images/corvo-bianco-2.jpg" class="img-fluid" />
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="container-products">
