--- a/corvo/index.html
+++ b/corvo/index.html
@@ -14,9 +14,9 @@
       <a class="logo" href="index.html">Корво Бьянко</a>
       <nav>
         <ul>
-          <li><a href="#winery-section">Главная</a></li>
+          <li><a href="#winery-section">Информация</a></li>
           <li><a href="#products-section">Продукты</a></li>
-          <li><a href="#contacts-section">О нас</a></li>
+          <li><a href="#contacts-section">Контакты</a></li>
         </ul>
       </nav>
     </header>
