--- a/corvo/index.html
+++ b/corvo/index.html
@@ -271,7 +271,6 @@
           </div>
         </div>
 
-        <!-- Модальные окна -->
         <div
           class="modal fade"
           id="wineModal1"
@@ -294,8 +293,8 @@
               </div>
               <div class="modal-body">
                 <p>
-                  Это вино обладает уникальным
-                  вкусом и ароматом, идеально подходит для различных блюд.
+                  Это вино обладает уникальным вкусом и ароматом, идеально
+                  подходит для различных блюд.
                 </p>
               </div>
               <div class="modal-footer">
@@ -332,8 +331,8 @@
               </div>
               <div class="modal-body">
                 <p>
-                  Это вино идеально сочетается с
-                  мясными блюдами и обладает насыщенным вкусом.
+                  Это вино идеально сочетается с мясными блюдами и обладает
+                  насыщенным вкусом.
                 </p>
               </div>
               <div class="modal-footer">
@@ -370,8 +369,8 @@
               </div>
               <div class="modal-body">
                 <p>
-                  Это вино обладает
-                  легким и свежим вкусом, идеально подходит для летних вечеров.
+                  Это вино обладает легким и свежим вкусом, идеально подходит
+                  для летних вечеров.
                 </p>
               </div>
               <div class="modal-footer">
@@ -408,8 +407,8 @@
               </div>
               <div class="modal-body">
                 <p>
-                  Это вино с глубоким вкусом и
-                  ароматом, отлично сочетается с красным мясом.
+                  Это вино с глубоким вкусом и ароматом, отлично сочетается с
+                  красным мясом.
                 </p>
               </div>
               <div class="modal-footer">
@@ -446,8 +445,8 @@
               </div>
               <div class="modal-body">
                 <p>
-                  Это вино обладает уникальным вкусом
-                  и прекрасно подходит для особых случаев.
+                  Это вино обладает уникальным вкусом и прекрасно подходит для
+                  особых случаев.
                 </p>
               </div>
               <div class="modal-footer">
@@ -484,8 +483,8 @@
               </div>
               <div class="modal-body">
                 <p>
-                  Это вино с насыщенным вкусом и
-                  ароматом, идеально подходит для мясных блюд.
+                  Это вино с насыщенным вкусом и ароматом, идеально подходит для
+                  мясных блюд.
                 </p>
               </div>
               <div class="modal-footer">
@@ -522,8 +521,8 @@
               </div>
               <div class="modal-body">
                 <p>
-                  Это вино обладает изысканным
-                  вкусом и прекрасно сочетается с морепродуктами.
+                  Это вино обладает изысканным вкусом и прекрасно сочетается с
+                  морепродуктами.
                 </p>
               </div>
               <div class="modal-footer">
@@ -558,8 +557,8 @@
               </div>
               <div class="modal-body">
                 <p>
-                  Это вино с ярким вкусом и ароматом,
-                  идеально подходит для вечерних встреч.
+                  Это вино с ярким вкусом и ароматом, идеально подходит для
+                  вечерних встреч.
                 </p>
               </div>
               <div class="modal-footer">
@@ -594,8 +593,8 @@
               </div>
               <div class="modal-body">
                 <p>
-                  Это вино с легким и свежим вкусом, идеально
-                  подходит для летних вечеров.
+                  Это вино с легким и свежим вкусом, идеально подходит для
+                  летних вечеров.
                 </p>
               </div>
               <div class="modal-footer">
@@ -632,8 +631,8 @@
               </div>
               <div class="modal-body">
                 <p>
-                  Это вино с насыщенным вкусом,
-                  идеально подходит для особых случаев.
+                  Это вино с насыщенным вкусом, идеально подходит для особых
+                  случаев.
                 </p>
               </div>
               <div class="modal-footer">
