--- a/corvo/index.html
+++ b/corvo/index.html
@@ -41,7 +41,7 @@
             data-bs-ride="carousel"
             id="winery-carousel"
           >
-            <div class="carousel-indicators">
+            <!-- <div class="carousel-indicators">
               <button
                 type="button"
                 data-bs-target="#winery-carousel"
@@ -58,7 +58,7 @@
                 data-bs-target="#winery-carousel"
                 data-bs-slide-to="2"
               ></button>
-            </div>
+            </div> -->
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="assest/images/corvo-bianco.jpg" class="img-fluid" />
