--- a/corvo/index.html
+++ b/corvo/index.html
@@ -5,7 +5,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    /> -->
     <link rel="stylesheet" href="assest/styles/style.css" />
+    <!-- <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=mail"
+    /> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -45,7 +53,7 @@
               <button
                 type="button"
                 data-bs-target="#winery-carousel"
-                data-bs-slide-to="0"
+                data-bs-slide-to="0"''
                 class="active"
               ></button>
               <button
@@ -728,13 +736,20 @@
       <div class="container-fluid contacts" id="contacts-section">
         <ul>
           <li>
+            <h6>Общая информация</h6>
             <a href="https://witcher3map.com/t/#6/87.141/64.430/w=86.906,63.484"
               >Мы на карте</a
             >
           </li>
           <li><a href="#">Отзывы</a></li>
           <li><a href="#">Лицензия</a></li>
-          <li><a href="#">Связь с нами</a></li>
+          <!-- <li><a href="#">Связь с нами</a></li> -->
+        </ul>
+        <ul>
+          <h6>Связь с нами</h6>
+          <a href="#">VK</a>
+          <a href="#">Telegram</a>
+          <p>Email: абвгдеёж@gmail.com</p>
         </ul>
       </div>
     </footer>
