--- a/corvo/index.html
+++ b/corvo/index.html
@@ -746,10 +746,10 @@
           <!-- <li><a href="#">Связь с нами</a></li> -->
         </ul>
         <ul>
-          <h6>Связь с нами</h6>
-          <a href="#">VK</a>
-          <a href="#">Telegram</a>
-          <p>Email: абвгдеёж@gmail.com</p>
+          <li><h6>Связь с нами</h6></li>
+          <li><a href="#">VK</a></li>
+          <li><a href="#">Telegram</a></li>
+          <li><p>Email: абвгдеёж@gmail.com</p></li>
         </ul>
       </div>
     </footer>
