--- a/corvo/index.html
+++ b/corvo/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <title>Корво Бьянко</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +20,11 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="index.html">Корво Бьянко</a>
+      <!-- <a class="logo" href="index.html">Корво Бьянко</a> -->
+      <div class="logo">
+        <!-- <img src="assest/images/logo.png" /> -->
+        <a href="index.html">Корво Бьянко</a>
+      </div>
       <nav>
         <ul>
           <li><a href="#winery-section">Информация</a></li>
