some params for image logo

--- a/corvo/index.html
+++ b/corvo/index.html
@@ -22,7 +22,7 @@
     <header>
       <!-- <a class="logo" href="index.html">Корво Бьянко</a> -->
       <div class="logo">
-        <!-- <img src="assest/images/logo.png" /> -->
+        <!-- <a href="index.html"><img src="assest/images/logo.png" class="img-fluid"/></a> -->
         <a href="index.html">Корво Бьянко</a>
       </div>
       <nav>
@@ -54,11 +54,11 @@
             data-bs-ride="carousel"
             id="winery-carousel"
           >
-            <!-- <div class="carousel-indicators">
+            <div class="carousel-indicators">
               <button
                 type="button"
                 data-bs-target="#winery-carousel"
-                data-bs-slide-to="0"''
+                data-bs-slide-to="0"
                 class="active"
               ></button>
               <button
@@ -71,7 +71,7 @@
                 data-bs-target="#winery-carousel"
                 data-bs-slide-to="2"
               ></button>
-            </div> -->
+            </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="assest/images/corvo-bianco.jpg" class="img-fluid" />
