--- a/corvo/index.html
+++ b/corvo/index.html
@@ -11,10 +11,7 @@
       href="path/to/font-awesome/css/font-awesome.min.css"
     /> -->
     <link rel="stylesheet" href="assest/styles/style.css" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=mail"
-    /> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -737,7 +734,7 @@
       </div>
     </main>
 
-    <footer>
+    <!-- <footer>
       <div class="container-fluid contacts" id="contacts-section">
         <ul>
           <li>
@@ -748,7 +745,6 @@
           </li>
           <li><a href="#">Отзывы</a></li>
           <li><a href="#">Лицензия</a></li>
-          <!-- <li><a href="#">Связь с нами</a></li> -->
         </ul>
         <ul>
           <li><h6>Связь с нами</h6></li>
@@ -756,6 +752,27 @@
           <li><a href="#">Telegram</a></li>
           <li><p>Email: абвгдеёж@gmail.com</p></li>
         </ul>
+      </div>
+    </footer> -->
+    <footer>
+      <div class="footer">
+        <div class="footer-item">
+          <h6>Общая информация</h6>
+          <p><a href="#">Отзывы</a></p>
+          <p><a href="#">Лицензия</a></p>
+        </div>
+        <div class="footer-item">
+          <h6>Контакты</h6>
+          <p>
+            <span class="material-symbols-outlined"> call </span>
+            8 (846) 207-40-30
+          </p>
+
+          <p>
+            <span class="material-symbols-outlined"> mail </span>
+            Email: абвгдеёж@gmail.com
+          </p>
+        </div>
       </div>
     </footer>
   </body>
