--- a/corvo/index.html
+++ b/corvo/index.html
@@ -11,7 +11,10 @@
       href="path/to/font-awesome/css/font-awesome.min.css"
     /> -->
     <link rel="stylesheet" href="assest/styles/style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
