--- a/corvo/index.html
+++ b/corvo/index.html
@@ -758,21 +758,27 @@
       </div>
     </footer> -->
     <footer>
-      <div class="footer">
+      <div class="footer container-fluid" id="contacts-section">
         <div class="footer-item">
           <h6>Общая информация</h6>
-          <p><a href="#">Отзывы</a></p>
-          <p><a href="#">Лицензия</a></p>
+          <p>
+            <span class="material-symbols-outlined">reviews</span>
+            <a href="#">Отзывы</a>
+          </p>
+          <p>
+            <span class="material-symbols-outlined">license</span>
+            <a href="#">Лицензия</a>
+          </p>
         </div>
         <div class="footer-item">
           <h6>Контакты</h6>
           <p>
-            <span class="material-symbols-outlined"> call </span>
+            <span class="material-symbols-outlined">call</span>
             8 (846) 207-40-30
           </p>
 
           <p>
-            <span class="material-symbols-outlined"> mail </span>
+            <span class="material-symbols-outlined">mail</span>
             Email: абвгдеёж@gmail.com
           </p>
         </div>
