--- a/corvo/index.html
+++ b/corvo/index.html
@@ -88,7 +88,7 @@
                 src="assest/images/wine/white-wine-from-Beauclair.png"
                 class="img-fluid"
               />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Белое вино из Боклера</h4>
                 <button
                   type="button"
@@ -105,7 +105,7 @@
                 src="assest/images/wine/butcher-from-blaviken.png"
                 class="img-fluid"
               />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Мясник из Блавикена</h4>
                 <button
                   type="button"
@@ -119,7 +119,7 @@
             </div>
             <div class="card">
               <img src="assest/images/wine/pino-blan.png" class="img-fluid" />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Пино Блан Резерв Кавлер Д'Адам</h4>
                 <button
                   type="button"
@@ -136,7 +136,7 @@
                 src="assest/images/wine/caberne-shato.png"
                 class="img-fluid"
               />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Каберне Шато Де Конрад</h4>
                 <button
                   type="button"
@@ -153,7 +153,7 @@
                 src="assest/images/wine/shato-mon-valgane.png"
                 class="img-fluid"
               />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Шато Мон-Вальжан</h4>
                 <button
                   type="button"
@@ -170,7 +170,7 @@
                 src="assest/images/wine/graf-var-ohmann.png"
                 class="img-fluid"
               />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Граф Вар Охманн Шираз</h4>
                 <button
                   type="button"
@@ -187,7 +187,7 @@
                 src="assest/images/wine/gercog-nikolya.png"
                 class="img-fluid"
               />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Герцог Николя Шардоне</h4>
                 <button
                   type="button"
@@ -201,7 +201,7 @@
             </div>
             <div class="card">
               <img src="assest/images/wine/ervelyus.png" class="img-fluid" />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Эрвелюс</h4>
                 <button
                   type="button"
@@ -215,7 +215,7 @@
             </div>
             <div class="card">
               <img src="assest/images/wine/est-est.png" class="img-fluid" />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Эст-Эст</h4>
                 <button
                   type="button"
@@ -232,7 +232,7 @@
                 src="assest/images/wine/geralt-from-rivia.png"
                 class="img-fluid"
               />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Геральт из Ривии</h4>
                 <button
                   type="button"
@@ -249,7 +249,7 @@
                 src="assest/images/wine/wonderful-wine-gilyom.png"
                 class="img-fluid"
               />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Восхитительное вино Гильома Де Буа</h4>
                 <button
                   type="button"
@@ -263,7 +263,7 @@
             </div>
             <div class="card">
               <img src="assest/images/wine/white-wolf.png" class="img-fluid" />
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h4 class="card-title">Белый Волк</h4>
                 <button
                   type="button"
