--- a/corvo/index.html
+++ b/corvo/index.html
@@ -84,7 +84,10 @@
           <h1>Коллекция вина</h1>
           <div class="products" id="products-section">
             <div class="card new">
-              <h2 class="new-header">Новинка</h2>
+              <div class="new-badge">
+                <span class="material-symbols-outlined"> new_releases </span>
+                <h2>Новинка</h2>
+              </div>
               <img
                 src="assest/images/wine/sansretur_shardone.png"
                 class="img-fluid"
