map between info and contacts

--- a/corvo/index.html
+++ b/corvo/index.html
@@ -846,7 +846,8 @@
               >Мы на карте</a
             >
           </p> -->
-
+        </div>
+        <div class="footer-item">
           <h6>Мы на карте</h6>
           <div class="map" style="position: relative; overflow: hidden">
             <a
